Configurable Certbot server with the default value set to Let's Encrypt staging environment
Squashed commit of the following:

commit 089b604f911cefc318c221e76c0f5ca1c29268e5
Author: Dmitry Makarov <dmitry@dmitry.fi>
Date:   Mon Dec 21 10:37:47 2020 +0200

    Configurable certbot server

--- a/playbooks/wordpress/roles/wordpress/tasks/main.yml
+++ b/playbooks/wordpress/roles/wordpress/tasks/main.yml
@@ -88,6 +88,7 @@
       --dns-google \
       --dns-google-credentials {{ certbot_dns_google_credentials_file_dest }} \
       --dns-google-propagation-seconds {{ certbot_dns_google_propagation_seconds }} \
+      --server {{ certbot_server }} \
       --agree-tos \
       -m {{ certbot_email }} \
       --cert-name {{ wordpress_http_host }} \
