--- a/roles/wordpress/vars/main.yml
+++ b/roles/wordpress/vars/main.yml
@@ -4,6 +4,10 @@ wordpress_src: https://wordpress.org/latest.tar.gz
 wordpress_path: "/var/www/{{ wordpress_http_host }}"
 wordpress_http_conf: "{{ wordpress_http_host }}.conf"
 
-certbot_dns_google_credentials_file_dir: ~/.secrets/certbot
-certbot_dns_google_credentials_file_dest: "{{ certbot_dns_google_credentials_file_dir }}/google.json"
+certbot_dns_credentials_file_dir: ~/.secrets/certbot
+
+certbot_dns_google_credentials_file_dest: "{{ certbot_dns_credentials_file_dir }}/google.json"
 certbot_dns_google_propagation_seconds: 120
+
+certbot_dns_cloudflare_credentials_file_dest: "{{ certbot_dns_credentials_file_dir }}/google.json"
+certbot_dns_cloudflare_propagation_seconds: 120
