Multiple domain names support added
Squashed commit of the following:

commit 90e6d6ffe7d1110bb991d0f164cc239b20eb762b
Author: Dmitry Makarov <dmitry@dmitry.fi>
Date:   Mon Dec 21 16:17:45 2020 +0200

    Support for multiple domain names added

--- a/roles/wordpress/tasks/dns_gcp.yml
+++ b/roles/wordpress/tasks/dns_gcp.yml
@@ -17,8 +17,8 @@
       --server {{ certbot_server }} \
       --agree-tos \
       -m {{ certbot_email }} \
-      --cert-name {{ wordpress_http_host }} \
-      -d {{ wordpress_http_host }} \
-      -d www.{{ wordpress_http_host }}
+      --cert-name {{ wordpress_http_hosts | first }} \
+      -d {{ wordpress_http_hosts | join(' -d ') }} \
+      -d www.{{ wordpress_http_hosts | join(' -d www.') }}
   args:
-    creates: /etc/letsencrypt/live/{{ wordpress_http_host }}
+    creates: /etc/letsencrypt/live/{{ wordpress_http_hosts | first }}
