--- a/vars/default.yml
+++ b/vars/default.yml
@@ -8,6 +8,13 @@ php_modules:
   - php-intl
   - php-zip
 
+nginx_add_header:
+  - "X-Frame-Options SAMEORIGIN"
+  - "X-Content-Type-Options nosniff"
+  - "X-XSS-Protection \"1; mode=block\""
+  - "Strict-Transport-Security max-age=15768000"
+  - "Content-Security-Policy \"script-src 'self' 'unsafe-inline' 'unsafe-eval'; object-src 'self'\""
+
 nginx_client_max_body_size: 100M
 php_upload_max_filesize: 100M
 php_post_max_size: 100M
