--- a/vars/default.yml
+++ b/vars/default.yml
@@ -7,6 +7,8 @@ php_modules:
   - php-soap
   - php-intl
   - php-zip
+  - php-imagick
+  - php-json
 
 nginx_add_header:
   - "X-Frame-Options SAMEORIGIN"
